<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Roam</string>
    <string name="subreddits">Subreddits</string>
    <string name="go_to">Go to subreddit</string>
    <string name="search_posts">Search posts</string>
    <string name="add_subscription">Add subreddit subscription</string>
    <string name="go_to_random">Random subreddit</string>
    <string name="firstTime">Doing initial setup</string>
    <string name="sort">Sort</string>
    <string name="change.theme">Change theme</string>
    <string name="addThisSubreddit">Subscribe</string>
    <string name="link_share_title">A post on Reddit</string>
    <string name="comments_share_title">A Reddit comment thread</string>
    <string name="format_numberofcomments"><xliff:g id="number_of_comments">%d</xliff:g> comments</string>
    <string name="frontpage">Frontpage</string>
    <string name="format_search_results">Search: %s</string>
    <string name="message_loading_more_posts">Loading more posts&#8230;</string>
    <string name="in"> in </string>
    <string name="format_subreddit">r/%s</string>
    <string name="activity_comments">Comments</string>
    <string name="format_points"><xliff:g id="time_since_posting">%d</xliff:g> points</string>
    <string name="score_hidden">score hidden</string>
    <string name="message_error_loading_comments">An error occurred while retrieving comments</string>
    <string name="load_more_comments">Load more</string>
    <string name="activity_link">Browser</string>
    <string name="sr_go_to_hint">Enter subreddit name</string>
    <string name="go">Go</string>
    <string name="sr_search_posts_hint">Enter search term</string>
    <string name="search">Search</string>
    <string name="format_limit_to">Limit to r/%s</string>
    <string name="add">Add</string>
    <string name="message_subreddit_added">Subreddit added</string>
    <string name="cannot_subscribe_to_frontpage">You cannot subscribe to the frontpage</string>
    <string name="message_subreddit_present">You are already subscribed to this subreddit</string>
    <string name="message_subreddit_banned">That subreddit has been banned</string>
    <string name="message_subreddit_not_valid">That subreddit does not exist</string>
    <string name="message_cant_add_search">You cannot subscribe to search results</string>
    <string name="post_options">Post options</string>
    <string name="open_in_browser">Open link</string>
    <string name="view_subreddit">Go to %s</string>
    <string name="share">Share</string>
    <string name="view_user">%s\'s profile</string>
    <string name="share_link">Link</string>
    <string name="share_comments">Comments</string>
    <string name="cancel">Cancel</string>
    <string name="just_now">just now</string>
    <string name="format_minuteselapsed"><xliff:g id="minutes_since_posting">%d</xliff:g> min</string>
    <string name="format_hourselapsed"><xliff:g id="hours_since_posting">%d</xliff:g> hrs</string>
    <string name="format_hour"><xliff:g id="hour_since_posting">%d</xliff:g> hr</string>
    <string name="format_dayselapsed"><xliff:g id="days_since_posting">%d</xliff:g> days</string>
    <string name="format_day"><xliff:g id="day_since_posting">%d</xliff:g> day</string>
    <string name="format_weekselapsed"><xliff:g id="weeks_since_posting">%d</xliff:g> wks</string>
    <string name="format_week"><xliff:g id="week_since_posting">%d</xliff:g> wk</string>
    <string name="format_monthselapsed"><xliff:g id="months_since_posting">%d</xliff:g> months</string>
    <string name="format_month"><xliff:g id="month_since_posting">%d</xliff:g> month</string>
    <string name="format_yearselapsed"><xliff:g id="years_since_posting">%d</xliff:g> yrs</string>
    <string name="format_year"><xliff:g id="years_since_posting">%d</xliff:g> yr</string>
    <string name="sort_hot">Hot</string>
    <string name="sort_new">New</string>
    <string name="sort_rising">Rising</string>
    <string name="sort_top">Top</string>
    <string name="sort_top_all_time">Top (all time)</string>
    <string name="sort_top_day">Top (day)</string>
    <string name="sort_top_week">Top (week)</string>
    <string name="sort_top_month">Top (month)</string>
    <string name="sort_top_year">Top (year)</string>
    <string name="sort_confidence">confidence</string>
    <string name="sort_controversial">controversial</string>
    <string name="sort_old">old</string>
    <string name="sort_qa">qa</string>
    <string name="sidebar">Sidebar</string>
    <string name="loading_sidebar">Loading sidebar content&#8230;</string>
    <string name="error_loading_sidebar">Error occurred while loading sidebar content</string>
    <string name="pref_sidebar_default_value">@string/loading_sidebar</string>
    <string name="format_user_nameAndAge">%1$s - %2$s</string>
    <string name="format_user_karma">KARMA: %1$s / %2$s</string>
    <string-array name="sort_listing_options">
        <item>hot</item>
        <item>new</item>
        <item>rising</item>
        <item>top</item>
    </string-array>
    <string name="pref_subreddit_list">sp_SubList</string>
    <string name="pref_reload_subreddits">sp_RelSubs</string>
    <string name="pref_current_subreddit">sp_CurSub</string>
    <string name="pref_search_string">sp_searchString</string>
    <string name="pref_theme">theme_setting</string>
    <string name="pref_boolean_use_tablet_layout">tablet_boolean</string>
    <string name="pref_last_post">lastPost</string>
    <string name="pref_last_comment_thread">lastCommentThread</string>
    <string name="pref_last_valid_nav_item">lastValidNav</string>
    <string name="error_while_loading_posts">An error occurred while loading posts</string>
    <string name="refresh">Refresh</string>
    <string name="retry">Retry</string>
    <string name="widget_empty">Something went wrong. Open app to refresh widget.</string>
    <string name="cp_authority">com.avinashdavid.readitforreddit</string>
    <string name="title_activity_manage_subreddits">Delete Subscriptions</string>
    <string name="delete_subreddit">Delete subreddit</string>
    <string name="fontName_clear_sans_regular">Clear Sans (Regular)</string>
    <string name="font_clear_sans_regular">fonts/ClearSans-Regular.ttf</string>
    <string name="fontName_rosario_regular">Rosario</string>
    <string name="font_rosario_regular">fonts/Rosario-Regular.ttf</string>
    <string name="fontName_glacial_indifference_regular">Glacial Indifference</string>
    <string name="font_glacial_indifference_regular">fonts/GlacialIndifference-Regular.otf</string>
    <string name="fontName_metrophobic">Metrophobic</string>
    <string name="font_metrophobic">fonts/Metrophobic.otf</string>
    <string name="fontName_BPreplay">BPreplay</string>
    <string name="font_BPreplay">fonts/BPreplay.otf</string>
    <string name="fontName_calibri">Calibri</string>
    <string name="font_calibri">fonts/calibri.ttf</string>
    <string name="fontName_expressway">Expressway</string>
    <string name="font_expressway">fonts/expressway.ttf</string>
    <string name="fontName_cmu">Computer Modern</string>
    <string name="font_cmu">fonts/cmu_sans.ttf</string>
    <string name="fontName_cmu_serif">Computer Modern (Serif)</string>
    <string name="font_cmu_serif">fonts/cmu_conc.ttf</string>
    <string name="view_full_comment_thread">View full comment thread</string>
    <string name="quit_dialog_title">Quit</string>
    <string name="quit_dialog_message">Are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading_dialog_defaultTitle">Please wait</string>
    <string name="loading_dialog_defaultMessage">Doing work</string>
    <string name="title_app_settings">Settings</string>
    <string name="title_login">Log In</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="title_theme_settings">Theme</string>
    <string name="title_font_settings">Font</string>
    <string name="pref_key_use_custom_font">useCustomFont</string>
    <string name="pref_name_use_custom_font">Use custom font</string>
    <string name="pref_summary_custom_font">6 available custom fonts</string>
    <string name="pref_key_select_font">whichFont</string>
    <string name="pref_name_select_font">Select font</string>
    <string-array name="font_array_values">
        <item>@string/font_calibri</item>
        <item>@string/font_clear_sans_regular</item>
        <item>@string/font_cmu</item>
        <item>@string/font_cmu_serif</item>
        <item>@string/font_metrophobic</item>
        <item>@string/font_BPreplay</item>
        <item>@string/font_glacial_indifference_regular</item>
        <item>@string/font_expressway</item>
    </string-array>
    <string-array name="font_array_names">
        <item>@string/fontName_calibri</item>
        <item>@string/fontName_clear_sans_regular</item>
        <item>@string/fontName_cmu</item>
        <item>@string/fontName_cmu_serif</item>
        <item>@string/fontName_metrophobic</item>
        <item>@string/fontName_BPreplay</item>
        <item>@string/fontName_glacial_indifference_regular</item>
        <item>@string/fontName_expressway</item>
    </string-array>
    <string name="pref_key_select_theme">theme_pref</string>
    <string name="pref_name_select_theme">Select theme</string>
    <string name="pref_summary_select_theme">7 available themes</string>
    <string name="message_restart_to_see_changes">Please restart the app for changes</string>
    <string name="theme.reddit">Reddit</string>
    <string name="theme.saturated">Reddit Saturated</string>
    <string name="theme.white">Light</string>
    <string name="theme.strawberries">Red</string>
    <string name="theme.coastal">Solarized Reddit</string>
    <string name="theme.dark">Dark (Red)</string>
    <string name="theme.solarized.light">Solarized (Light)</string>
    <string-array name="theme_array_names">
        <item>@string/theme.reddit</item>
        <item>@string/theme.saturated</item>
        <item>@string/theme.white</item>
        <item>@string/theme.strawberries</item>
        <item>@string/theme.coastal</item>
        <item>@string/theme.solarized.light</item>
        <item>@string/theme.dark</item>
    </string-array>
    <string-array name="theme_array_values">
        <item>0</item>
        <item>9</item>
        <item>10</item>
        <item>5</item>
        <item>6</item>
        <item>11</item>
        <item>7</item>
    </string-array>
    <string name="pref_key_toolbar_color">prefToolCol</string>
    <string name="pref_name_toolbar_color">Change toolbar color</string>
    <string name="pref_toolbar_default_color">nope</string>
    <string name="pref_key_background_color">prefWindowColor</string>
    <string name="color.red">#ffff4444</string>
    <string name="color.green">#00e500</string>
    <string name="color.blue">#ff33b5e5</string>
    <string name="color.yellow">#FFEB3B</string>
    <string-array name="toolbar_color_names">
        <item>Theme default</item>
        <item>Red</item>
        <item>Green</item>
        <item>Indigo</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="toolbar_color_values">
        <item>@string/pref_toolbar_default_color</item>
        <item>@string/color.red</item>
        <item>@string/color.green</item>
        <item>@string/color.blue</item>
        <item>@string/color.yellow</item>
    </string-array>
</resources>