<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/above_menu">
        <item
            android:orderInCategory="0"
            android:id="@+id/go.to.subreddit"
            android:title="@string/go_to"/>

        <item
            android:orderInCategory="0"
            android:id="@+id/random.subreddit"
            android:title="@string/go_to_random"/>

        <item
            android:orderInCategory="0"
            android:id="@+id/search.posts"
            android:title="@string/search_posts"/>

        <item
            android:orderInCategory="0"
            android:id="@+id/add.subscription"
            android:title="@string/title_activity_manage_subreddits"/>

    </group>

    <group

        android:id="@+id/subreddits_group"
        android:checkableBehavior="single">

        <item
            android:orderInCategory="1"
            android:id="@+id/goToFrontpage"
              android:title="@string/frontpage"/>
    </group>
    <!--<item android:title="@string/subreddits">-->
        <!--<menu>-->
            <!--<group-->
                <!--android:id="@+id/subreddits_group"-->
                <!--android:checkableBehavior="single">-->

                <!--<item android:id="@+id/goToFrontpage"-->
                      <!--android:title="@string/frontpage"/>-->
            <!--</group>-->
        <!--</menu>-->
    <!--</item>-->

</menu>