<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingTop="@dimen/padding_listing_cardview"
    android:paddingBottom="@dimen/padding_listing_cardview">

    <!--<TextView-->
        <!--android:text="@string/post_options"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"/>-->

    <TextView
        android:id="@+id/view_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_in_browser"
        style="@style/PostOptionsItem"/>

    <TextView
        android:id="@+id/share_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        style="@style/PostOptionsItem"/>

    <TextView
        android:id="@+id/view_subreddit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_subreddit"
        style="@style/PostOptionsItem"/>

    <TextView
        android:id="@+id/view_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_subreddit"
        style="@style/PostOptionsItem"/>


</LinearLayout>